[package]
name = "just-download"
version = "0.1.0"
authors = ["Randy Schütt <rswhite4@googlemail.com>"]
edition = "2018"

[dependencies]
just-core = { git = "https://github.com/just-cli/just-core"}
just-versions = { git = "https://github.com/just-cli/just-versions" }
indicatif = "0.11.0"
reqwest = "0.9.5"
log = "0.4.6"
semver= "0.9"

